--- a/server.properties
+++ b/server.properties
@@ -1,53 +1,49 @@
 #Minecraft server properties
-#Sat Jul 09 08:00:48 UTC 2022
-enable-jmx-monitoring=false
-rcon.port=25575
-level-seed=
-enable-command-block=true
-gamemode=adventure
-enable-query=false
-generator-settings=
-level-name=world
-motd=Hunters Among Speedrunners
-query.port=25565
-pvp=true
-generate-structures=true
-difficulty=easy
-network-compression-threshold=256
-max-tick-time=60000
-use-native-transport=true
-max-players=15
-enable-status=true
-online-mode=true
-allow-flight=false
+#Tue Jul 12 21:42:51 AEST 2022
 broadcast-rcon-to-ops=true
 view-distance=10
-max-build-height=256
-server-ip=0.0.0.0
-allow-nether=true
+enable-jmx-monitoring=false
+server-ip=
+resource-pack-prompt=
+rcon.port=25575
+gamemode=survival
 server-port=25565
-sync-chunk-writes=true
+allow-nether=true
+enable-command-block=false
 enable-rcon=false
+sync-chunk-writes=true
+enable-query=false
 op-permission-level=4
 prevent-proxy-connections=false
 resource-pack=
 entity-broadcast-range-percentage=100
-player-idle-timeout=0
+level-name=world
 rcon.password=
+player-idle-timeout=0
+motd=Hunters Among Speedrunners game server\!
+query.port=25565
 force-gamemode=false
-debug=false
 rate-limit=0
 hardcore=false
 white-list=false
 broadcast-console-to-ops=true
+pvp=true
 spawn-npcs=true
 spawn-animals=true
-snooper-enabled=true
+snooper-enabled=false
+difficulty=easy
 function-permission-level=2
-level-type=default
+network-compression-threshold=256
 text-filtering-config=
+require-resource-pack=false
 spawn-monsters=true
+max-tick-time=60000
 enforce-whitelist=false
-spawn-protection=0
+use-native-transport=true
+max-players=50
 resource-pack-sha1=
+spawn-protection=5
+online-mode=true
+enable-status=true
+allow-flight=false
 max-world-size=29999984
