--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Sat Jul 09 08:00:48 UTC 2022
+#Tue Aug 02 13:08:39 UTC 2022
 enable-jmx-monitoring=false
 rcon.port=25575
 level-seed=
@@ -9,14 +9,15 @@ enable-query=false
 generator-settings=
 level-name=world
 motd=Hunters Among Speedrunners
-query.port=25565
+query.port=25568
 pvp=true
 generate-structures=true
 difficulty=easy
 network-compression-threshold=256
 max-tick-time=60000
-use-native-transport=true
+require-resource-pack=false
 max-players=15
+use-native-transport=true
 enable-status=true
 online-mode=true
 allow-flight=false
@@ -24,8 +25,9 @@ broadcast-rcon-to-ops=true
 view-distance=10
 max-build-height=256
 server-ip=0.0.0.0
+resource-pack-prompt=
 allow-nether=true
-server-port=25565
+server-port=25568
 sync-chunk-writes=true
 enable-rcon=false
 op-permission-level=4
